--- a/DotnetStore.csproj
+++ b/DotnetStore.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.1" />
+        <PackageReference Include="Microsoft.Build.Framework" Version="17.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
@@ -25,6 +26,25 @@
       <_ContentIncludedByDefault Remove="Pages\UserAddresses\Details.cshtml" />
       <_ContentIncludedByDefault Remove="Pages\UserAddresses\Edit.cshtml" />
       <_ContentIncludedByDefault Remove="Pages\UserAddresses\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Admin\Discounts\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Admin\Discounts\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Admin\Discounts\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Admin\Discounts\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Admin\Discounts\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Discounts\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Discounts\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Discounts\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Discounts\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Discounts\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Areas\Admin\_Layout.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <UpToDateCheckInput Remove="Areas\Admin\Discounts\Create.cshtml" />
+      <UpToDateCheckInput Remove="Areas\Admin\Discounts\Delete.cshtml" />
+      <UpToDateCheckInput Remove="Areas\Admin\Discounts\Details.cshtml" />
+      <UpToDateCheckInput Remove="Areas\Admin\Discounts\Edit.cshtml" />
+      <UpToDateCheckInput Remove="Areas\Admin\Discounts\Index.cshtml" />
     </ItemGroup>
 
 </Project>
