--- a/DotnetStore.csproj
+++ b/DotnetStore.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
         <PackageReference Include="Microsoft.Build.Framework" Version="17.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
@@ -45,6 +46,10 @@
       <UpToDateCheckInput Remove="Areas\Admin\Discounts\Details.cshtml" />
       <UpToDateCheckInput Remove="Areas\Admin\Discounts\Edit.cshtml" />
       <UpToDateCheckInput Remove="Areas\Admin\Discounts\Index.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AdditionalFiles Include="Pages\Checkout\Cart.cshtml" />
     </ItemGroup>
 
 </Project>
